fixed centre alignment

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 
 * {
     font-family: 'BC-Falster-Grotesk-Regular', sans-serif;
+    border: 1px solid rgb(255, 0, 0);
 }
 
 body {
@@ -21,6 +22,7 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 header {
@@ -50,10 +52,10 @@ ul {
 
 .poem {
   max-width: 45%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   margin-top: 3rem;
-  display: block;
+  display: inline-block;
+
 }
 
 .poem h2 {
